# rcconf

./: .gitignore  CMakeLists.txt  README.md  debug.sh  rcconf.c  rcconf.h  rcconf_list.c  rcconf_list.h  rcconf_sublist.c  rcconf_sublist.h  release.sh  test.sh
test/: CMakeLists.txt  test.c
